[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/Sfondi/background-1.png" type="Texture" id=1]
[ext_resource path="res://Asset/Buttons/right.png" type="Texture" id=2]
[ext_resource path="res://Shaders/Color.shader" type="Shader" id=3]
[ext_resource path="res://Screens/ImageBox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Color( 0.45098, 0.2, 0.0509804, 1 )

[sub_resource type="Animation" id=3]
resource_name = "Next Hopp"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Next/Next_Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.28, 1.28 ), Vector2( 1.28, 1e-05 ), Vector2( 1.28, 1.28 ) ]
}

[node name="ImageBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackbone" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1120.0
margin_top = 512.0
margin_right = 887.0
margin_bottom = -80.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 96.0
margin_right = -32.0
margin_bottom = -16.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShownImage" type="TextureRect" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TouchScreenButton" parent="TextureRect"]
position = Vector2( 1088, 416 )
shape = SubResource( 2 )

[node name="Next_Sprite" type="Sprite" parent="TextureRect/Next"]
material = SubResource( 1 )
position = Vector2( 64, 64 )
scale = Vector2( 1.28, 1.15165 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
"anims/Next Hopp" = SubResource( 3 )
[connection signal="pressed" from="TextureRect/Next" to="." method="_on_Next_pressed"]
